k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cramee-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: cramee.link
      http:
        paths:
          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: client-service
                port:
                  number: 3000
    - host: cramee.link
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8080
  #tls:
  #  - hosts:
  #      - "cramee.link"
  #    secretName: cramee-cert
